--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -40,6 +41,7 @@ dependencies {
     def lifecycle_version = "2.8.7"
     def activity_version = "1.7.0"
     def nav_version = "2.8.6"
+    def room_version = "2.6.1"
 
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -60,4 +62,6 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
