--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     def nav_version = "2.8.6"
     def room_version = "2.6.1"
 
+    def firebase_version = "2.6.1"
+    def play_services_version = "18.5.0"
+
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     //LiveData
@@ -64,4 +67,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation("com.google.firebase:firebase-bom:$firebase_version")
+    implementation "com.google.firebase:firebase-messaging-ktx"
+    implementation "com.google.android.gms:play-services-base:$play_services_version"
 }
