--- a/build.gradle
+++ b/build.gradle
@@ -2,5 +2,5 @@
 plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.kotlin.android) apply false
-    id 'com.goolgle.gms.google-services'
+    id 'com.google.gms.google-services'
 }
