--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     id 'org.jetbrains.kotlin.kapt'
+    alias(libs.plugins.google.services) // <----
 }
 
 android {
@@ -27,6 +28,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+        coreLibraryDesugaringEnabled true // <----
     }
     kotlinOptions {
         jvmTarget = '11'
@@ -42,9 +44,6 @@ dependencies {
     def activity_version = "1.7.0"
     def nav_version = "2.8.6"
     def room_version = "2.6.1"
-
-    def firebase_version = "2.6.1"
-    def play_services_version = "18.5.0"
 
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -67,7 +66,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation("com.google.firebase:firebase-bom:$firebase_version")
-    implementation "com.google.firebase:firebase-messaging-ktx"
-    implementation "com.google.android.gms:play-services-base:$play_services_version"
+
+    implementation(platform(libs.firebase)) // <----
+    implementation libs.firebase.messaging // <----
+    implementation libs.play.services // <----
+    coreLibraryDesugaring(libs.desugaring) // <----
 }
