--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,10 @@ material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
 gson = "2.13.1"
+firebase = "34.2.0" # <----
+googleServices = "4.4.3" # <----
+desugaring = "2.1.5" # <----
+playServices = "18.7.2" # <----
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,8 +25,12 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" } # <----
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging" } # <----
+desugaring = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugaring" } # <----
+play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServices" } # <----
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" } # <----
